fixing page height on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,7 @@
 html {
   min-width: 320px;
   box-sizing: border-box;
+  scroll-behavior: smooth;
   scroll-padding-top: 500px;
 }
 
