--- a/src/app/home-page/contact/contact.component.scss
+++ b/src/app/home-page/contact/contact.component.scss
@@ -3,9 +3,10 @@
 .contact {
   display: flex;
   overflow: hidden;
+  min-height: -webkit-fill-available;
   @include media-breakpoint-up(md) {
     align-items: center;
-    min-block-size: 100vh;
+    min-height: 100vh;
   }
   @include media-breakpoint-up(lg) {
     padding: 0 4rem;
