--- a/src/app/home-page/work/work.component.scss
+++ b/src/app/home-page/work/work.component.scss
@@ -4,9 +4,10 @@
   overflow: hidden;
   position: relative;
   display: flex;
+  min-height: -webkit-fill-available;
   @include media-breakpoint-up(md) {
     align-items: center;
-    min-block-size: 100vh;
+    min-height: 100vh;
   }
   @include media-breakpoint-up(lg) {
     padding: 0 4rem;
