--- a/src/app/styles/_text.scss
+++ b/src/app/styles/_text.scss
@@ -10,7 +10,7 @@
 }
 
 .section--subtitle {
-  font-size: 3em;
+  font-size: 2.5em;
   margin: 0;
   letter-spacing: 2px;
   margin: -10px 0 0px -2px;
